Fix main nav display on smaller screens

--- a/style.css
+++ b/style.css
@@ -143,6 +143,12 @@ a:hover {
     justify-content: center;
 }
 
+@media (max-width: 992px) {
+    .main-nav {
+        display: none;
+    }
+}
+
 .nav-list {
     list-style: none;
     display: flex;
